fix: updates route path to avoid 404

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="module-card">
             <h2>Linear Regression</h2>
             <p>Explore and understand linear regression through interactive visualizations and guided exercises.</p>
-            <a href="modules/linear-regression/list.html">Start Learning</a>
+            <a href="./modules/linear-regression">Start Learning</a>
         </div>
 
         <div class="module-card">
