--- a/modules/linear-regression/index.html
+++ b/modules/linear-regression/index.html
@@ -4,23 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linear Regression Playground</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+    <title>Linear Regression</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
-    <div class="scene-wrapper">
-        <button id="home-button" onclick="window.location.href='./list.html';">Back</button>
-        <div id="scene-container"></div>
-        <div id="gui-container"></div>
-        <div class="instruction" id="instruction"></div>
-    </div>
+    <button id="home-button" onclick="window.location.href='../../';">Home</button>
+
+    <main>
+        <h1>Linear Regression</h1>
+        <div id="tasks-container"></div>
+        <button id="scene-button" onclick="window.location.href='./practice.html';">Start Learning</button>
+    </main>
 
     <script type="text/javascript" src="./index.js"></script>
+
 </body>
 
 </html>
